<resources>
    <string name="app_name">LastText</string>

    <!-- Main Activity -->
    <string name="activity_main_disable_automessage">Auto messaging has been disabled   To enable, tap on \'Disable/Enable Auto Message\' in menu</string>
    <string name="activity_main_text_no_messages">No auto messages, add one using + button</string>

    <!-- Detail Activity -->
    <string name="activity_detail_title">Add a New Message</string>
    <string name="activity_detail_edit_text_name">Who do you want to text?</string>
    <string name="activity_detail_edit_text_number">What is their number?</string>
    <string name="activity_detail_edit_text_battery_percentage">At what battery % do you want to send the message?</string>
    <string name="activity_detail_edit_text_message">What message do you want to send?</string>
    <string name="activity_detail_edit_text_message_default">Hi,\nMy phone is running out of battery!</string>
    <string name="activity_detail_button_cancel">Cancel</string>
    <string name="activity_detail_button_create">Create</string>
    <string name="activity_detail_button_update">Update</string>
    <string name="activity_detail_button_delete_message">Delete Message</string>
    <string name="activity_detail_button_choose_contact">Choose From Contacts</string>
    <string name="activity_detail_code_delete_title">Delete Message</string>
    <string name="activity_detail_code_delete_question">Are you sure you want to delete this message?</string>
    <string name="activity_detail_code_delete_success">The message has been removed</string>
    <string name="activity_detail_code_delete_yes">Yes</string>
    <string name="activity_detail_code_delete_no">No</string>
    <string name="activity_detail_code_create_success">A new message has been created</string>
    <string name="activity_detail_code_update_success">The message has been updated</string>
    <string name="activity_detail_code_create_fields_needed">All the fields are required</string>

    <!-- History Activity -->
    <string name="activity_history_title">Message History</string>
    <string name="activity_history_text_no_messages">The message history is empty, they will show up here as soon as messages are sent</string>
    <string name="activity_history_button_delete_history">Delete All History</string>
    <string name="activity_history_code_history_cleared">The history has been cleared</string>

    <!-- Context Menu -->
    <string name="menu_button_history">Message History</string>
    <string name="menu_button_disable_enable_auto_message">Disable/Enable Auto Message</string>
    <string name="menu_button_rate_this_app">Rate This App</string>

    <!-- Notification -->
    <string name="notification_title">Message Sent</string>
    <string name="notification_body">An auto text message was to $s at $d%</string>
</resources>
