<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.farshadmomtaz.lasttext.DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true" >

        <Button
            android:id="@+id/ContactButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onGetContactClick"
            android:text="@string/activity_detail_button_choose_contact"
            android:visibility="visible" />

        <android.support.design.widget.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="12dp">

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="12"
                android:inputType="textPersonName"
                android:hint="@string/activity_detail_edit_text_name" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="12dp">

            <EditText
                android:id="@+id/editTextNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="12"
                android:inputType="phone"
                android:hint="@string/activity_detail_edit_text_number" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="3dp"
            android:layout_marginStart="3dp"
            android:layout_marginTop="12dp"
            android:text="@string/activity_detail_edit_text_battery_percentage"
            android:textColor="@color/colorAccent" />
        <RadioGroup
            android:id="@+id/radioBatteryPercentage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="5%" />

            <RadioButton
                android:id="@+id/radio10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="10%" />

            <RadioButton
                android:id="@+id/radio15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="15%" />

            <RadioButton
                android:id="@+id/radio20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="20%" />

            <RadioButton
                android:id="@+id/radio25"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="25%" />
        </RadioGroup>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp">

            <EditText
                android:id="@+id/editTextMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="12"
                android:hint="@string/activity_detail_edit_text_message"
                android:inputType="textMultiLine"
                android:text="@string/activity_detail_edit_text_message_default" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancelButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onCancelClick"
                android:text="@string/activity_detail_button_cancel" />

            <Button
                android:id="@+id/CreateUpdateButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/colorAccent"
                android:text="@string/activity_detail_button_create"
                android:onClick="onCreateUpdateClick"
                android:textColor="@android:color/white" />

        </LinearLayout>

        <Button
            android:id="@+id/RemoveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onRemoveClick"
            android:text="@string/activity_detail_button_delete_message"
            android:visibility="gone" />


    </LinearLayout>
</ScrollView>
